--- a/horizon-dashboard/package.json
+++ b/horizon-dashboard/package.json
@@ -16,6 +16,7 @@
     "faker": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
