--- a/horizon-dashboard/package.json
+++ b/horizon-dashboard/package.json
@@ -10,15 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@faker-js/faker": "^9.9.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.3.0",
+    "@mui/x-charts": "^8.9.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "apexcharts": "^5.3.2",
     "faker": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
